--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <title>IT Solutions</title>
+    <link rel="icon" type="image/x-icon" href="/Projekt/assets/icon.png" >
+    <title>Liquid Solutions</title>
   </head>
 
   <body>
@@ -115,6 +116,8 @@
             </div>
         </div>
 
+        <div class="gradient"></div>
+        
             <div class="myFooter">
                 <footer>
                     <p>
