--- a/Projekt/about.html
+++ b/Projekt/about.html
@@ -24,7 +24,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="/Projekt/index.html">Home</a>
+                            <a href="/Projekt/home.html">Home</a>
                         </li>
                         <li>
                             <a href="/Projekt/news.html">News</a> 
