--- a/Projekt/gallery.html
+++ b/Projekt/gallery.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li>
-                <a href="/Projekt/index.html">Home</a>
+                <a href="/Projekt/home.html">Home</a>
             </li>
             <li>
                 <a href="/Projekt/news.html">News</a> 
