--- a/Projekt/home.html
+++ b/Projekt/home.html
@@ -58,108 +58,105 @@
     <!----------------------->
     <!--------Content-------->
     <!----------------------->
-    <div class="content">
-      <img
-          src="/Projekt/assets/gif-image.gif"
-          alt="liquid_gif"
-          tag="liquid_gif"
-          class="liquidGif" 
-          />
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat.
-      </p>
-      <p>
-        Nunc porttitor, sem quis interdum condimentum, diam arcu varius
-        nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
-        Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
-        laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
-        fringilla viverra sapien. In hendrerit quis sapien id commodo.
-        Orci varius natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
-        viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
-        varius convallis risus vitae, lobortis dapibus ex. Suspendisse
-        luctus metus hendrerit felis iaculis varius. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-        Duis arcu orci, tempus vitae pharetra semper, ultricies quis
-        tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
-        Suspendisse ante arcu, egestas in malesuada convallis, tristique
-        et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
-        libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
-        sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
-        aliquam. Quisque quis nulla eget leo efficitur faucibus et in
-        massa. Cras ultrices feugiat urna.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-        egestas orci id porttitor porttitor. Integer eu mattis metus.
-        Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-        tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-        nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-        semper in ac tortor. Morbi ac velit eu purus convallis congue et
-        vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-        ligula. Aenean quis arcu massa.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-        egestas orci id porttitor porttitor. Integer eu mattis metus.
-        Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-        tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-        nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-        semper in ac tortor. Morbi ac velit eu purus convallis congue et
-        vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-        ligula. Aenean quis arcu massa.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-        lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
-        dui ac enim semper ultricies. Duis tristique odio ultricies arcu
-        tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
-        aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
-        Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
-        interdum est non enim consectetur convallis. Suspendisse sagittis
-        imperdiet velit, ac varius nisi. Proin congue orci nec nisi
-        tempor, at commodo leo tristique. Morbi vel est quis lacus
-        vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
-        egestas orci id porttitor porttitor. Integer eu mattis metus.
-        Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
-        tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
-        nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
-        semper in ac tortor. Morbi ac velit eu purus convallis congue et
-        vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
-        ligula. Aenean quis arcu massa.
-      </p>
+    <div class="blurred">
+        <div class="liquidGif">
+          <img src="/Projekt/assets/gif-image.gif" />
+          <p>These are some random glowing particles found on the interwebz</p>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
+          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
+          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
+          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
+          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
+          Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
+          interdum est non enim consectetur convallis. Suspendisse sagittis
+          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
+          tempor, at commodo leo tristique. Morbi vel est quis lacus
+          vulputate volutpat.
+        </p>
+        <p>
+          Nunc porttitor, sem quis interdum condimentum, diam arcu varius
+          nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
+          Nulla facilisi. Aliquam venenatis sapien nisl, ut placerat ipsum
+          laoreet tristique. Aenean enim elit, pulvinar a ipsum non,
+          fringilla viverra sapien. In hendrerit quis sapien id commodo.
+          Orci varius natoque penatibus et magnis dis parturient montes,
+          nascetur ridiculus mus. Vivamus sagittis tempor nibh, venenatis
+          viverra tortor semper sed. Suspendisse potenti. Proin dui mi,
+          varius convallis risus vitae, lobortis dapibus ex. Suspendisse
+          luctus metus hendrerit felis iaculis varius. Orci varius natoque
+          penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          Duis arcu orci, tempus vitae pharetra semper, ultricies quis
+          tellus. Cras commodo ultrices egestas. Maecenas a rhoncus nibh.
+          Suspendisse ante arcu, egestas in malesuada convallis, tristique
+          et ex. Aenean sodales varius lacinia. Vestibulum finibus tristique
+          libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
+          sit amet aliquet ultrices. Donec eget mauris quis lacus eleifend
+          aliquam. Quisque quis nulla eget leo efficitur faucibus et in
+          massa. Cras ultrices feugiat urna.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
+          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
+          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
+          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
+          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
+          Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
+          interdum est non enim consectetur convallis. Suspendisse sagittis
+          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
+          tempor, at commodo leo tristique. Morbi vel est quis lacus
+          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
+          egestas orci id porttitor porttitor. Integer eu mattis metus.
+          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
+          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
+          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
+          semper in ac tortor. Morbi ac velit eu purus convallis congue et
+          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
+          ligula. Aenean quis arcu massa.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
+          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
+          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
+          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
+          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
+          Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
+          interdum est non enim consectetur convallis. Suspendisse sagittis
+          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
+          tempor, at commodo leo tristique. Morbi vel est quis lacus
+          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
+          egestas orci id porttitor porttitor. Integer eu mattis metus.
+          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
+          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
+          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
+          semper in ac tortor. Morbi ac velit eu purus convallis congue et
+          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
+          ligula. Aenean quis arcu massa.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
+          lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
+          dui ac enim semper ultricies. Duis tristique odio ultricies arcu
+          tristique, ac efficitur erat tincidunt. Nunc venenatis ac ligula
+          aliquam malesuada. Nulla tincidunt hendrerit tincidunt.
+          Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Nulla non eros arcu. Sed
+          interdum est non enim consectetur convallis. Suspendisse sagittis
+          imperdiet velit, ac varius nisi. Proin congue orci nec nisi
+          tempor, at commodo leo tristique. Morbi vel est quis lacus
+          vulputate volutpat. Sed et metus et diam maximus elementum. Aenean
+          egestas orci id porttitor porttitor. Integer eu mattis metus.
+          Vestibulum pharetra non lorem pulvinar auctor. Quisque metus
+          tortor, pharetra vitae consectetur a, vestibulum et ligula. Nulla
+          nec ante eget sem blandit finibus. Sed eu libero ut dui molestie
+          semper in ac tortor. Morbi ac velit eu purus convallis congue et
+          vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
+          ligula. Aenean quis arcu massa.
+        </p>
     </div>
     <div class="gradient"></div>
     <!----------------------->
