--- a/Projekt/gallery.html
+++ b/Projekt/gallery.html
@@ -60,7 +60,7 @@
     <!----------------------->
     <div class="blurred">
         <div class="anchor-tag">
-            <a href="/Projekt/news.html"><h4> Back to News << </h4></a>
+            <a href="/Projekt/home.html"><h4> Back to Home << </h4></a>
             </div>
             <div class="gallery-content">
                 <div class="news-picture">
