--- a/Projekt/home.html
+++ b/Projekt/home.html
@@ -59,9 +59,10 @@
     <!--------Content-------->
     <!----------------------->
     <div class="blurred">
+      <div class="content">
         <div class="liquidGif">
           <img src="/Projekt/assets/gif-image.gif" />
-          <p>These are some random glowing particles found on the interwebz</p>
+          <p>There is some thing from the internetz</p>
         </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
@@ -97,6 +98,7 @@
           aliquam. Quisque quis nulla eget leo efficitur faucibus et in
           massa. Cras ultrices feugiat urna.
         </p>
+
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
           lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
@@ -157,6 +159,7 @@
           vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
           ligula. Aenean quis arcu massa.
         </p>
+      </div>
     </div>
     <div class="gradient"></div>
     <!----------------------->
