--- a/Projekt/contact.html
+++ b/Projekt/contact.html
@@ -59,6 +59,9 @@
     <!--------Content-------->
     <!----------------------->
     <div class="content">
+      <div class="anchor-tag">
+        <a href="/Projekt/home.html"><h4> Back to Home << </h4></a>
+        </div>
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88945.78578177938!2d15.894292274400195!3d45.840174554917105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d692c902cc39%3A0x3a45249628fbc28a!2sZagreb!5e0!3m2!1shr!2shr!4v1667834035988!5m2!1shr!2shr" 
         width="100%" 
