--- a/Projekt/news.html
+++ b/Projekt/news.html
@@ -61,7 +61,7 @@
     <div class="blurred">
 
       <div class="content">
-        <h2>NEWS</h2>
+        <h2 style="font-size: 30px;">NEWS</h2>
         <div class="gradient2"></div>
         
         <div class="newsNav">
