--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -24,8 +24,9 @@
     <!----------------------->
     <!------Landing page----->
     <!----------------------->
+    <div class="landingLogoDiv">
       <div class="landingLogo">
-        <a href="/Projekt/home.html"><img
+        <a href="/Projekt/pages/home.html"><img
           src="/Projekt/assets/logo.png"
           alt="landingLogo"
           tag="landingLogo"
@@ -33,5 +34,6 @@
           <p>by Bruno Grobelšek</p>
         </a>
       </div>
+    </div>
 </body>
 </html>
