--- a/Projekt/pages/home.html
+++ b/Projekt/pages/home.html
@@ -37,47 +37,32 @@
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/home.html">Home</a>
+                <a href="/Projekt/pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/news.html">News</a>
+                <a href="/Projekt/pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/contact.html">Contact</a>
+                <a href="/Projekt/pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/about.html">About</a>
+                <a href="/Projekt/pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/gallery.html">Gallery</a>
+                <a href="/Projekt/pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
       <div class="gradient"></div>
     </header>
     <!----------------------->
-    <!--------About---------->
+    <!--------Content-------->
     <!----------------------->
     <div class="blurred">
-        <div class="about-video">
-            <iframe 
-                width="1000" 
-                height="500" 
-                src="https://www.youtube.com/embed/lH6qlF_iegU" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow=
-                    "accelerometer; 
-                    autoplay; 
-                    clipboard-write; 
-                    encrypted-media; 
-                    gyroscope; 
-                    picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
-        <p style="text-align: center;">These are some random glowing particles found on the interwebz</p>
-            <div class="gradient"></div>
+      <div class="content">
+        <div class="liquidGif">
+          <img src="/Projekt/assets/gif-image.gif" />
+          <p>There is some thing from the internetz</p>
         </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
@@ -113,6 +98,7 @@
           aliquam. Quisque quis nulla eget leo efficitur faucibus et in
           massa. Cras ultrices feugiat urna.
         </p>
+
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
           lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
@@ -173,6 +159,7 @@
           vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
           ligula. Aenean quis arcu massa.
         </p>
+      </div>
     </div>
     <div class="gradient"></div>
     <!----------------------->
