--- a/Projekt/pages/news.html
+++ b/Projekt/pages/news.html
@@ -27,7 +27,7 @@
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/Projekt/home.html"><img
+        <a href="/Projekt/index.html"><img
           src="/Projekt/assets/logo.png"
           alt="logo"
           tag="logo"
@@ -37,19 +37,19 @@
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/home.html">Home</a>
+                <a href="/Projekt/pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/news.html">News</a>
+                <a href="/Projekt/pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/contact.html">Contact</a>
+                <a href="/Projekt/pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/about.html">About</a>
+                <a href="/Projekt/pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/gallery.html">Gallery</a>
+                <a href="/Projekt/pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -83,7 +83,7 @@
                 >[ More... ]
               </a>
             </p>
-            <p style="font-weight: bold;">10.01.2020.</p>
+            <p style="font-weight: bold;">Date: 10.01.2020.</p>
           </div>
         </div>  
         <div class="gradient2"></div>
@@ -107,7 +107,7 @@
               >[ More... ]
             </a>
           </p>
-          <p style="font-weight: bold;">10.11.2010.</p>
+          <p style="font-weight: bold;">Date: 10.11.2010.</p>
         </div>
       </div>  
       <div class="gradient2"></div>
@@ -129,7 +129,7 @@
             >[ More... ]
           </a>
         </p>
-        <p style="font-weight: bold;">12.05.2000.</p>
+        <p style="font-weight: bold;">Date: 12.05.2000.</p>
       </div>
     </div>  
     <div class="gradient2"></div>
@@ -146,7 +146,7 @@
             href="/Projekt/news-pages/doom.html"
             ><h1>CLICK HERE!!!</h1>
           </a>
-        <p style="font-weight: bold;">666</p>
+        <p style="font-weight: bold;">Date: 666</p>
       </div>
     </div>      
       </div>
