--- a/Projekt/news-pages/news-2.html
+++ b/Projekt/news-pages/news-2.html
@@ -20,7 +20,8 @@
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4">
+  </video>
   <div class="containter">
     <!----------------------->
     <!----Header && Logo----->
@@ -37,19 +38,19 @@
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/home.html">Home</a>
+                <a href="/Projekt/pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/news.html">News</a>
+                <a href="/Projekt/pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/contact.html">Contact</a>
+                <a href="/Projekt/pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/about.html">About</a>
+                <a href="/Projekt/pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/gallery.html">Gallery</a>
+                <a href="/Projekt/pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -60,7 +61,7 @@
     <!----------------------->
     <div class="blurred">
       <div class="anchor-tag">
-      <a href="/Projekt/news.html"><h4> Back to News << </h4></a>
+      <a href="/Projekt/pages/news.html"><h4> Back to News << </h4></a>
       <div class="news-content">
           <div class="news-picture">
             <img src="/Projekt/assets/news-gifs/news-1.gif" />
@@ -72,7 +73,7 @@
           </div>
       </div>
 
-      <h2>News from the world 1</h2>  
+      <h2>News from the world 2</h2>  
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
         lectus et sapien dictum tincidunt quis nec augue. Vivamus pharetra
