--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="/Projekt/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,21 +13,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="/Projekt/assets/icon.png" >
+    <link rel="icon" type="image/x-icon" href="assets/icon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+    <source src="assets/Fluid.mp4" type="video/mp4"></video>
     <!----------------------->
     <!------Landing page----->
     <!----------------------->
     <div class="landingLogoDiv">
       <div class="landingLogo">
-        <a href="/Projekt/pages/home.html"><img
-          src="/Projekt/assets/logo.png"
+        <a href="pages/home.html"><img
+          src="assets/logo.png"
           alt="landingLogo"
           tag="landingLogo"
           />
