--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/icon.png" >
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
@@ -26,13 +26,7 @@
     <!----------------------->
     <div class="landingLogoDiv">
       <div class="landingLogo">
-        <a href="pages/home.html"><img
-          src="assets/logo.png"
-          alt="landingLogo"
-          tag="landingLogo"
-          />
-          <p>by Bruno Grobelšek</p>
-        </a>
+        <img src="assets/logo.png" alt="logo">
       </div>
     </div>
 </body>
