--- a/Projekt/news-pages/doom.html
+++ b/Projekt/news-pages/doom.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="/Projekt/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="/Projekt/assets/icon.png" >
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Liquid Solutions</title>
