finally some progress

--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -24,10 +24,11 @@
     <!----------------------->
     <!------Landing page----->
     <!----------------------->
-    <div class="landingLogoDiv">
       <div class="landingLogo">
-        <img src="assets/logo.png" alt="logo">
-      </div>
+        <a href="pages/home.html">
+          <img src="assets/logo.png" alt="logo">
+          <p>by Bruno Grobelšek</p>
+        </a>
     </div>
 </body>
 </html>
