--- a/Projekt/pages/contact.html
+++ b/Projekt/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,43 +13,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+      <source src="../assets/Fluid.mp4" type="video/mp4">
+  </video>
   <div class="containter">
     <!----------------------->
     <!----Header && Logo----->
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/Projekt/home.html"><img
-          src="/Projekt/assets/logo.png"
-          alt="logo"
-          tag="logo"
-          class="myLogo"
-          /></a>
-      </div>
+        <a href="../index.html">
+          <img
+            src="../assets/logo.png"
+            alt="logo"
+            tag="logo"
+            class="myLogo"
+          />
+        </a>
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/pages/home.html">Home</a>
+                <a href="../pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/pages/news.html">News</a>
+                <a href="../pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/pages/contact.html">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/pages/about.html">About</a>
+                <a href="../pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/pages/gallery.html">Gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -60,13 +62,11 @@
     <!----------------------->
     <div class="content">
       <div class="anchor-tag">
-        <a href="/Projekt/pages/home.html"><h4> Back to Home << </h4></a>
+        <a href="./home.html"><h4> Back to Home << </h4></a>
         </div>
       <div class="frameAndFooter">
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88945.78578177938!2d15.894292274400195!3d45.840174554917105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d692c902cc39%3A0x3a45249628fbc28a!2sZagreb!5e0!3m2!1shr!2shr!4v1667834035988!5m2!1shr!2shr" 
-        width="100%" 
-        height="350"  
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88945.78578177938!2d15.894292274400195!3d45.840174554917105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d692c902cc39%3A0x3a45249628fbc28a!2sZagreb!5e0!3m2!1shr!2shr!4v1667834035988!5m2!1shr!2shr"   
         allowfullscreen="" 
         referrerpolicy="no-referrer-when-downgrade"
         >
