--- a/Projekt/pages/home.html
+++ b/Projekt/pages/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="assets/Fluid.mp4" type="video/mp4">
+    <source src="../assets/Fluid.mp4" type="video/mp4">
   </video>
   <div class="containter">
     <!----------------------->
@@ -28,9 +28,9 @@
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/./index.html">
+        <a href="../index.html">
           <img
-            src="/Projekt/assets/logo.png"
+            src="../assets/logo.png"
             alt="logo"
             tag="logo"
             class="myLogo"
@@ -40,19 +40,19 @@
         <nav>
           <ul>
             <li>
-                <a href="pages/home.html">Home</a>
+                <a href="../pages/home.html">Home</a>
             </li>
             <li>
-                <a href="pages/news.html">News</a>
+                <a href="../pages/news.html">News</a>
             </li>
             <li>
-                <a href="pages/contact.html">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="pages/about.html">About</a>
+                <a href="../pages/about.html">About</a>
             </li>
             <li>
-                <a href="pages/gallery.html">Gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -64,7 +64,7 @@
     <div class="blurred">
       <div class="content">
         <div class="liquidGif">
-          <img src="/Projekt/assets/gif-image.gif" />
+          <img src="../assets/gif-image.gif" />
           <p>There is some thing from the internetz</p>
         </div>
         <p>
