--- a/Projekt/pages/news.html
+++ b/Projekt/pages/news.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,43 +13,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+      <source src="../assets/Fluid.mp4" type="video/mp4">
+  </video>
   <div class="containter">
     <!----------------------->
     <!----Header && Logo----->
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/Projekt/index.html"><img
-          src="/Projekt/assets/logo.png"
-          alt="logo"
-          tag="logo"
-          class="myLogo"
-          /></a>
-      </div>
+        <a href="../index.html">
+          <img
+            src="../assets/logo.png"
+            alt="logo"
+            tag="logo"
+            class="myLogo"
+          />
+        </a>
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/pages/home.html">Home</a>
+                <a href="../pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/pages/news.html">News</a>
+                <a href="../pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/pages/contact.html">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/pages/about.html">About</a>
+                <a href="../pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/pages/gallery.html">Gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -66,11 +68,11 @@
         
         <div class="newsNav">
             <div class="newsGifs">
-              <img src="/Projekt/assets/news-gifs/news-1.gif"/>
+              <img src="../assets/news-gifs/news-1.gif"/>
             </div>
          <div class="newsContent">    
             <a 
-              href="/Projekt/news-pages/news-1.html" 
+              href="../news-pages/news-1.html" 
               >
               <h3>News from the world 1</h3>
             </a>
@@ -79,7 +81,7 @@
               nisl, in lacinia augue nisi tincidunt neque. Sed a mauris lacus.
               Nulla facilisi. Aliquam... 
               <a 
-                href="/Projekt/news-pages/news-1.html"
+                href="../news-pages/news-1.html"
                 >[ More... ]
               </a>
             </p>
@@ -90,11 +92,11 @@
 
         <div class="newsNav">
           <div class="newsGifs">
-            <img src="/Projekt/assets/news-gifs/news-2.gif"/>
+            <img src="../assets/news-gifs/news-2.gif"/>
           </div>
        <div class="newsContent">    
           <a 
-            href="/Projekt/news-pages/news-2.html" 
+            href="../news-pages/news-2.html" 
             >
             <h3>News from the world 2</h3>
           </a>
@@ -103,7 +105,7 @@
             libero, in suscipit ante iaculis nec. Curabitur faucibus ligula
             sit amet aliquet ultrices...
             <a 
-              href="/Projekt/news-pages/news-2.html"
+              href="../news-pages/news-2.html"
               >[ More... ]
             </a>
           </p>
@@ -114,18 +116,18 @@
       
       <div class="newsNav">
         <div class="newsGifs">
-          <img src="/Projekt/assets/news-gifs/news-3.gif"/>
+          <img src="../assets/news-gifs/news-3.gif"/>
         </div>
      <div class="newsContent">    
         <a 
-          href="/Projekt/news-pages/news-3.html" 
+          href="../news-pages/news-3.html" 
           >
           <h3>News from the world 3</h3>
         </a>
         <p>
           Curabitur faucibus ligula sit amet aliquet ultrices...
           <a 
-            href="/Projekt/news-pages/news-3.html"
+            href="../news-pages/news-3.html"
             >[ More... ]
           </a>
         </p>
@@ -136,14 +138,14 @@
 
       <div class="newsNav">
         <div class="newsGifs">
-          <img src="/Projekt/assets/news-gifs/doom1.gif"/>
+          <img src="../assets/news-gifs/doom1.gif"/>
         </div>
      <div class="newsContent">    
           <h3>Enough news?  </h3>
           <h3> ---> WANNA PLAY DOOM? <--- </h3>
         </a>
           <a 
-            href="/Projekt/news-pages/doom.html"
+            href="../news-pages/doom.html"
             ><h1>CLICK HERE!!!</h1>
           </a>
         <p style="font-weight: bold;">Date: 666</p>
