--- a/Projekt/news-pages/doom.html
+++ b/Projekt/news-pages/doom.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png" >
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Liquid Solutions</title>
@@ -22,36 +22,37 @@
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+    <source src="../assets/Fluid.mp4" type="video/mp4"></video>
   <div class="containter">
     <!----------------------->
     <!----Header && Logo----->
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/Projekt/index.html"><img
-          src="/Projekt/assets/logo.png"
-          alt="logo"
-          tag="logo"
-          class="myLogo"
+        <a href="../index.html">
+          <img
+            src="../assets/logo.png"
+            alt="logo"
+            tag="logo"
+            class="myLogo"
           /></a>
       </div>
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/home.html">Home</a>
+                <a href="../home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/news.html">News</a>
+                <a href="../news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/contact.html">Contact</a>
+                <a href="../contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/about.html">About</a>
+                <a href="../about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/gallery.html">Gallery</a>
+                <a href="../gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -61,7 +62,7 @@
     <!--------DOOM-------->
     <!----------------------->
       <div class="anchor-tag">
-        <a href="/Projekt/pages/news.html"><h4> Back to News << </h4></a>
+        <a href="../pages/news.html"><h4> Back to News << </h4></a>
       </div>
       <div class="content">
       
