--- a/Projekt/news-pages/news-3.html
+++ b/Projekt/news-pages/news-3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Bruno Grobelšek" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
@@ -13,43 +13,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" >
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png" >
     <title>Liquid Solutions</title>
   </head>
 <body>
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="/Projekt/assets/Fluid.mp4" type="video/mp4"></video>
+      <source src="../assets/Fluid.mp4" type="video/mp4">
+  </video>
   <div class="containter">
     <!----------------------->
     <!----Header && Logo----->
     <!----------------------->
     <header class="myHeader">
       <div class="logo">
-        <a href="/Projekt/index.html"><img
-          src="/Projekt/assets/logo.png"
-          alt="logo"
-          tag="logo"
-          class="myLogo"
-          /></a>
-      </div>
+        <a href="../index.html">
+          <img
+            src="../assets/logo.png"
+            alt="logo"
+            tag="logo"
+            class="myLogo"
+          />
+        </a>
         <nav>
           <ul>
             <li>
-                <a href="/Projekt/pages/home.html">Home</a>
+                <a href="../pages/home.html">Home</a>
             </li>
             <li>
-                <a href="/Projekt/pages/news.html">News</a>
+                <a href="../pages/news.html">News</a>
             </li>
             <li>
-                <a href="/Projekt/pages/contact.html">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="/Projekt/pages/about.html">About</a>
+                <a href="../pages/about.html">About</a>
             </li>
             <li>
-                <a href="/Projekt/pages/gallery.html">Gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -60,18 +62,18 @@
     <!----------------------->
     <div class="blurred">
       <div class="anchor-tag">
-      <a href="/Projekt/pages/news.html"><h4> Back to News << </h4></a>
+      <a href="../pages/news.html"><h4> Back to News << </h4></a>
       <div class="news-content">
           <div class="news-picture">
-            <img src="/Projekt/assets/news-gifs/news-1.gif" />
+            <img src="../assets/news-gifs/news-1.gif" />
             <p>This is a description</p>
           </div>
           <div class="news-picture">
-            <img src="/Projekt/assets/news-gifs/news-2.gif" />
+            <img src="../assets/news-gifs/news-2.gif" />
             <p>This is a description</p>
           </div>
           <div class="news-picture">
-            <img src="/Projekt/assets/news-gifs/news-3.gif" />
+            <img src="../assets/news-gifs/news-3.gif" />
             <p>This is a description</p>
           </div>
       </div>
@@ -132,7 +134,7 @@
         aliquam. Quisque quis nulla eget leo efficitur faucibus et in
         massa. Cras ultrices feugiat urna.
       </p>
-      <h4> Source: <a href="/Projekt/index.html">  Liquid Solutions </a></h4>
+      <h4> Source: <a href="../index.html">  Liquid Solutions </a></h4>
     </div>
         
   </div>      
