--- a/Projekt/pages/home.html
+++ b/Projekt/pages/home.html
@@ -20,7 +20,7 @@
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="../assets/Fluid.mp4" type="video/mp4">
+      <source src="../assets/Fluid.mp4" type="video/mp4">
   </video>
   <div class="containter">
     <!----------------------->
@@ -36,7 +36,6 @@
             class="myLogo"
           />
         </a>
-      </div>
         <nav>
           <ul>
             <li>
@@ -61,10 +60,9 @@
     <!----------------------->
     <!--------Content-------->
     <!----------------------->
-    <div class="blurred">
       <div class="content">
         <div class="liquidGif">
-          <img src="../assets/gif-image.gif" />
+          <img src="/Projekt/assets/gif-image.gif" />
           <p>There is some thing from the internetz</p>
         </div>
         <p>
@@ -162,7 +160,6 @@
           vel risus. Cras at nunc finibus, euismod erat vel, pulvinar
           ligula. Aenean quis arcu massa.
         </p>
-      </div>
     </div>
     <div class="gradient"></div>
     <!----------------------->
