--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -24,11 +24,13 @@
     <!----------------------->
     <!------Landing page----->
     <!----------------------->
+    <div class="landingLogoDiv">
       <div class="landingLogo">
         <a href="pages/home.html">
           <img src="assets/logo.png" alt="logo">
           <p>by Bruno Grobelšek</p>
         </a>
+      </div>
     </div>
 </body>
 </html>
