--- a/Projekt/news-pages/doom.html
+++ b/Projekt/news-pages/doom.html
@@ -40,19 +40,19 @@
         <nav>
           <ul>
             <li>
-                <a href="../home.html">Home</a>
+                <a href="../pages/home.html">Home</a>
             </li>
             <li>
-                <a href="../news.html">News</a>
+                <a href="../pages/news.html">News</a>
             </li>
             <li>
-                <a href="../contact.html">Contact</a>
+                <a href="../pages/contact.html">Contact</a>
             </li>
             <li>
-                <a href="../about.html">About</a>
+                <a href="../pages/about.html">About</a>
             </li>
             <li>
-                <a href="../gallery.html">Gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </li>
           </ul>
       </nav>
@@ -62,7 +62,7 @@
     <!--------DOOM-------->
     <!----------------------->
       <div class="anchor-tag">
-        <a href="../pages/news.html"><h4> Back to News << </h4></a>
+        <a href="../pages/home.html"><h4> Back to the normal life.. << </h4></a>
       </div>
       <div class="content">
       
