--- a/Projekt/pages/home.html
+++ b/Projekt/pages/home.html
@@ -62,7 +62,7 @@
     <!----------------------->
       <div class="content">
         <div class="liquidGif">
-          <img src="/Projekt/assets/gif-image.gif" />
+          <img src="../assets/gif-image.gif" />
           <p>There is some thing from the internetz</p>
         </div>
         <p>
