--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -20,7 +20,8 @@
   <video 
     id="background-video" 
     autoplay loop muted>
-    <source src="assets/Fluid.mp4" type="video/mp4"></video>
+    <source src="assets/Fluid.mp4" type="video/mp4">
+  </video>
     <!----------------------->
     <!------Landing page----->
     <!----------------------->
